# modlunky2

./: .gitignore  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  TODO.md  build-exe.py  deny.toml  entities.json  modlunky2.spec  pyinstaller-cli.py  pytest.ini  requirements-dev.txt  requirements-win.txt  requirements.txt  setup.py  ui.py
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: build-exe.yml  build.yml  rust-test.yml  test.yml  ui-test.yml
app/: bump-version.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/obs-source/: category.html  category.js  co.html  co.js  gem.html  gem.js  global.css  index.html  pacifist.html  pacifist.js  pacino-golf.html  pacino-golf.js  timer.html  timer.js  tracker-runtime.js
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/resources/backdrops/: README.md
app/src-tauri/src/: characters.rs  config.rs  extract.rs  fonts.rs  fyi_ws.rs  level_editor.rs  lib.rs  log_buffer.rs  main.rs  mods.rs  overlunky.rs  paths.rs  playlunky.rs  state.rs  toast_buffer.rs  updater.rs  window_icon.rs
app/src-tauri/src/templates/: main.lua
app/src-tauri/src/trackers/: consumers.rs  file_task.rs  mod.rs  render.rs  server.rs  slot.rs  tick_task.rs
app/src/hooks/: useFloatingMenu.ts  useModLogo.ts
app/src/lib/: commands.ts  theme.ts  toastLevel.ts
app/src/types/: config.ts  mods.ts  paths.ts  playlunky.ts  playlunkyOptions.ts
crates/dll_injector/: Cargo.toml
crates/dll_injector/src/: lib.rs  main.rs
crates/ml2_assets/: Cargo.toml  NOTICE.md
crates/ml2_assets/src/: assets.rs  files.rs  fsb5.rs  lib.rs  soundbank.rs  strings.rs
crates/ml2_chacha/: Cargo.toml
crates/ml2_chacha/src/: lib.rs
crates/ml2_entity_data/: Cargo.toml  build.rs
crates/ml2_entity_data/src/: lib.rs
crates/ml2_levels/: Cargo.toml
crates/ml2_levels/src/: chances.rs  dmpreview.rs  error.rs  file.rs  lib.rs  mosaic.rs  settings.rs  templates.rs  tilecodes.rs  utils.rs
crates/ml2_levels/tests/: roundtrip.rs
crates/ml2_mem/: Cargo.toml
crates/ml2_mem/src/: entity_uid_list.rs  error.rs  lib.rs  mem_type.rs  pointer.rs  poly_pointer.rs  unordered_map.rs  vector.rs
crates/ml2_mem/src/process/: mod.rs  stub.rs  win.rs
crates/ml2_mem/tests/: ui.rs
crates/ml2_mem/tests/ui/: memenum_missing_discriminant.rs  memenum_missing_discriminant.stderr  memenum_no_repr.rs  memenum_no_repr.stderr  memenum_non_unit_variant.rs  memenum_non_unit_variant.stderr  memenum_unsupported_repr.rs  memenum_unsupported_repr.stderr  memstruct_missing_offset.rs  memstruct_missing_offset.stderr  memstruct_on_enum.rs  memstruct_on_enum.stderr
crates/ml2_mem_derive/: Cargo.toml
crates/ml2_mem_derive/src/: lib.rs
crates/ml2_mods/: Cargo.toml
crates/ml2_mods/examples/: api.rs  mods.rs  web_socket.rs
crates/ml2_mods/src/: data.rs  lib.rs  manager.rs
crates/ml2_mods/src/local/: cache.rs  demo.rs  disk.rs  mod.rs
crates/ml2_mods/src/spelunkyfyi/: demo.rs  http.rs  mod.rs  web_socket.rs
crates/ml2_mods/tests/: manager.rs
crates/ml2_mods/tests/data/install_dir/Mods/.ml/pack-metadata/fyi.remote-control/: manifest.json
crates/ml2_mods/tests/data/install_dir/Mods/Packs/.db/: readme.md
crates/ml2_mods/tests/data/install_dir/Mods/Packs/provincial/: readme.md
crates/ml2_net/: Cargo.toml
crates/ml2_net/src/: backoff.rs  lib.rs
crates/ml2_sprites/: Cargo.toml
crates/ml2_sprites/src/: atlas.rs  chunks.rs  error.rs  lib.rs  loader.rs  merger.rs
crates/ml2_trackers/: Cargo.toml
crates/ml2_trackers/src/: arena_state.rs  chain.rs  entity.rs  entity_map.rs  entity_types.rs  enums.rs  flags.rs  label.rs  lib.rs  runstate.rs  state.rs  testing.rs  tracker.rs
crates/ml2_vorbis_header/: Cargo.toml
crates/ml2_vorbis_header/src/: lib.rs
crates/modlunky2_dll/: Cargo.toml
crates/modlunky2_dll/src/: critical_section.rs  lib.rs  models.rs  search.rs
scripts/: build-release.mjs  dump-entity-types.mjs
src/launcher/: Cargo.toml  build.rs
src/launcher/src/: main.rs
src/libs/ml2_assets/: .gitignore  Cargo.toml
src/libs/ml2_assets/src/: assets.rs  files.rs  fsb5.rs  lib.rs  soundbank.rs  strings.rs  vorbis.rs
src/libs/ml2_assets/src/vorbis_data/: mod.rs  ogg.rs  rebuild.rs  vorbis.rs
src/libs/ml2_chacha/: Cargo.toml
src/libs/ml2_entity_data/: Cargo.toml  build.rs
src/libs/ml2_entity_data/src/: lib.rs
src/libs/ml2_mods/: Cargo.toml
src/libs/ml2_mods/examples/: api.rs  cli.rs  mods.rs  web_socket.rs
src/libs/ml2_mods/src/: cache.rs  constants.rs  data.rs  lib.rs  local.rs  manager.rs
src/libs/ml2_mods/src/local/: cache.rs  demo.rs  disk.rs  mod.rs
src/libs/ml2_mods/src/spelunkyfyi/: demo.rs  http.rs  mod.rs  poll.rs  web_socket.rs
src/libs/ml2_mods/tests/: manager.rs
src/libs/ml2_mods/tests/data/install_dir/Mods/Packs/fyi.remote-control/: readme.md
src/libs/ml2_net/: Cargo.toml
src/libs/ml2_net/src/: backoff.rs  http.rs  lib.rs
src/libs/ml2_types/: Cargo.toml
src/libs/ml2_vorbis_header/: Cargo.toml
src/modlunky2/: VERSION  api.py  cli.py  code_execution.py  config.py  constants.py  injectlib.py  mem_demo.py  native.py  spawn_item.py  steam.py  tilecodes.txt  tiles.py  ui.py  updater.py  utils.py  version.py  winmem.py
src/modlunky2/assets/: README.md  __init__.py  assets.py  chacha.py  constants.py  converters.py  exc.py  extractor.py  hashing.py  packer.py  patcher.py  (+3 more)
src/s2_control/: cli.py  injectlib.py  spawn_item.py
src/tauri/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/tauri/src-tauri/src/: main.rs  mods.rs
src/tests/: config_test.py
src/ui/: .eslintrc.json  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts
src/ui/src-tauri/: Cargo.toml  tauri.conf.json
src/ui/src-tauri/icons/: icon.icns
src/ui/src-tauri/src/: main.rs
(+468 files in other folders)
