[package]
name = "dll_injector"
version = "0.1.0"
authors = ["iojonmbnmb", "garebear"]
edition = "2018"

[lib]
name = "dll_injector"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "inject_dll"
path = "src/main.rs"
doc = false

[dependencies]
"winapi" = { version = "0.3.9", features = [
    "memoryapi",
    "winnt",
    "processthreadsapi",
    "minwindef",
    "errhandlingapi",
    "libloaderapi",
    "tlhelp32",
    "psapi",
] }
sysinfo = "0.15.3"
log = "0.4.11"
env_logger = "0.8.1"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
