[package]
name = "ml2_mem"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ml2_mem_derive = { path = "../ml2_mem_derive" }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
] }

[dev-dependencies]
# Tests use a mock process that reads out of a Vec<u8>, so no windows
# crate needed on non-Windows CI.
#
# UI-test harness for compile-error assertions on ml2_mem_derive.
# Fixtures live in `tests/ui/*.rs` with matching `.stderr` snapshots.
# Regenerate snapshots with `TRYBUILD=overwrite cargo test -p ml2_mem
# --test ui`.
trybuild = "1"
