[package]
name = "ml2_net"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backon = "1"
thiserror = "2"
tokio = { version = "1.32", features = ["time"] }
