[package]
name = "modlunky2_dll"
version = "0.1.0"
authors = ["iojonmbnmb", "garebear"]
edition = "2018"

[lib]
name = "modlunky2"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
"winapi" = { version = "0.3.9", features = [
    "memoryapi",
    "winnt",
    "processthreadsapi",
    "minwindef",
    "errhandlingapi",
    "libloaderapi",
    "tlhelp32",
] }
byteorder = "*"
hex-literal = "*"
memmem = "*"