[package]
name = "launcher"
version = "0.1.0"
authors = ["garebear <mail@spelunky.fyi>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
zip = "0.6.6"
anyhow = "1.0.75"
clap = "4.4.5"
sha2 = "0.10.7"

[build-dependencies]
zip = "0.6.6"
walkdir = "2.4.0"
sha2 = "0.10.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "modlunky2"
path = "src/main.rs"
