[package]
name = "ml2_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ml2-extract-assets"
path = "src/bin/extract-assets.rs"

[dependencies]
byteorder = "1"
zstd = "0.11"
image = "0.24"
ddsfile = "0.5"
ml2_chacha = {path = "../ml2_chacha"}