[package]
name = "ml2_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ml2-extract-assets"
path = "src/bin/extract-assets.rs"

[[bin]]
name = "ml2-hash-strings"
path = "src/bin/hash-strings.rs"

[[bin]]
name = "ml2-extract-soundbank"
path = "src/bin/extract-soundbank.rs"

[dependencies]
byteorder = "1"
zstd = "0.11"
image = "0.24"
ddsfile = "0.5"
crc32fast = "1"
riff-io = "0.1"
ml2_chacha = {path = "../ml2_chacha"}
bitreader = "0.3"
hound = "3.5"