[package]
name = "ml2_assets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ml2-extract-assets"
path = "src/bin/extract-assets.rs"

[[bin]]
name = "ml2-hash-strings"
path = "src/bin/hash-strings.rs"

[[bin]]
name = "ml2-extract-soundbank"
path = "src/bin/extract-soundbank.rs"

[dependencies]
anyhow = "1"
bitreader = "0.3"
byteorder = "1"
crc32fast = "1"
ddsfile = "0.5"
hound = "3.5"
image = "0.24"
ml2_chacha = { path = "../ml2_chacha" }
ml2_vorbis_header = { path = "../ml2_vorbis_header" }
ogg-sys = "0.0.9"
riff-io = "0.1"
thiserror = "1"
vorbis-sys = "0.1.1"
zstd = "0.13"
