[package]
name = "ml2_mods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
derivative = "2.2"
http = "0.2"
hyper = {version = "0.14", features = ["client", "http1", "http2", "tcp"]}
hyper-tls = "0.5"
rand = "0.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
thiserror = "1.0"
tokio = {version = "1.21", features = ["fs", "macros", "rt", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-graceful-shutdown = "0.11.1"
tower = {version = "0.4", features = ["util"]}
tower-http = {version = "0.3", features = ["follow-redirect", "sensitive-headers", "set-header", "trace", "util"]}
tracing = "0.1"
zip = "0.6"

[dev-dependencies]
clap = {version = "3.2", features = ["derive"]}
tracing-subscriber = "0.3"
