[package]
name = "ml2_mods"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derivative = "2.2"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"
instant = "0.1"
ml2_net = { path = "../ml2_net" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5"
thiserror = "1.0"
tokio = { version = "1.28", features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-graceful-shutdown = "0.12"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
zip = "0.6"

[dev-dependencies]
clap = { version = "4.3", features = ["derive"] }
tracing-subscriber = "0.3"
