[package]
name = "modlunky2"
version = "0.1.0"
description = "A tool for creating and using mods related to Spelunky 2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
anyhow = "1.0"
directories = "5.0"
ml2_mods = { path = "../../libs/ml2_mods" }
ml2_net = { path = "../../libs/ml2_net" }
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = ["api-all"] }
tokio = { version = "1.36", features = ["macros", "sync"] }
tokio-graceful-shutdown = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
